# desktop

./: .env.example  .env.production  .gitignore  CLAUDE.md  README.md  RUST_IMPROVEMENTS_PLAN.md  VALIDATION_INTEGRATION_SUMMARY.md  VALIDATION_INTEGRATION_TODO.md  VALIDATION_USAGE.md  WINDOWS_BUILD.md  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
dev-tools/: Cargo.toml  README.md  cursor_analysis.rs  cursor_blob_analyzer.rs  cursor_hex_inspector.rs  inspect_cursor.rs
setup-instructions/: claude-code.md  codex.md  cursor.md  gemini-code.md  github-copilot.md  opencode.md
src/: App.tsx  index.css  index.html  main.tsx  react-syntax-highlighter.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 009_create_session_assessments.sql  010_add_phase_analysis.sql  011_add_core_metrics_tracking.sql  012_add_category_improvement_tips.sql  013_add_file_hash.sql  017_add_context_management_metrics.sql  018_update_context_metrics_structure.sql  019_remove_per_message_tokens.sql  020_remove_peak_context_tokens.sql
src-tauri/src/: auth_server.rs  claude_files.rs  commands.rs  config.rs  database.rs  error.rs  file_watcher.rs  git_diff.rs  lib.rs  logging.rs  main.rs  project_metadata.rs  shutdown.rs  upload_queue.rs  upload_queue.rs.backup  validation.rs
src-tauri/src/events/: bus.rs  handlers.rs  mod.rs  types.rs
src-tauri/src/providers/: CLAUDE_CONVERTER_TODO.md  VALIDATION_GUIDE.md  claude.rs  claude_watcher.rs  codex.rs  codex_watcher.rs  copilot.rs  copilot_parser.rs  copilot_snapshot.rs  copilot_utils.rs  copilot_watcher.rs  cursor_watcher.rs  db_helpers.rs  gemini.rs  gemini_parser.rs  gemini_registry.rs  gemini_utils.rs  gemini_watcher.rs  mod.rs  opencode.rs  opencode_parser.rs  opencode_watcher.rs  session_scanner.rs
src-tauri/src/providers/canonical/: converter.rs  mod.rs  tests.rs
src-tauri/src/providers/claude/: converter.rs  converter_utils.rs  mod.rs  scanner.rs  types.rs  watcher.rs
src-tauri/src/providers/codex/: converter.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/src/providers/common/: agent_merger.rs  canonical_path.rs  constants.rs  file_utils.rs  mod.rs  session_state.rs  timing.rs  watcher_status.rs
src-tauri/src/providers/copilot/: converter.rs  mod.rs  parser.rs  scanner.rs  utils.rs  watcher.rs
src-tauri/src/providers/cursor/: CLAUDE.md  converter.rs  db.rs  debug.rs  mod.rs  protobuf.rs  scanner.rs  types.rs  watcher.rs
src-tauri/src/providers/gemini/: converter.rs  mod.rs  registry.rs  scanner.rs  utils.rs  watcher.rs
src-tauri/src/providers/opencode/: converter.rs  mod.rs  scanner.rs  watcher.rs
src-tauri/src/upload_queue/: CLAUDE.md  compression.rs  hashing.rs  mod.rs  mod.rs.bak  processor.rs  queue_manager.rs  types.rs  validation.rs
src-tauri/src/upload_queue/upload/: metrics.rs  mod.rs  project.rs  retry.rs  v2.rs
src-tauri/tests/: codex_conversion_test.rs  gemini_cwd_extraction.rs
src/components/: ActiveSessionCard.tsx  AiProcessingProgress.tsx  JsonBlock.tsx  LogViewer.tsx  Login.tsx  ProcessingModeDialog.tsx  ProjectClaudeTab.tsx  ProjectDetailHeader.tsx  ProjectSessionsList.tsx  ProviderStatusIndicator.tsx  SessionChangesTab.tsx  SessionContextTab.tsx  StatusView.tsx  ToastContainer.tsx  UserInfo.tsx  ValidationBadge.tsx  ValidationReport.tsx  git-diff-scoped.css
src/components/Configuration/: AgentConfig.tsx  SessionSync.tsx  SetupInstructions.tsx
src/components/Layout/: AppLayout.tsx  Header.tsx  SideNav.tsx
src/components/Onboarding/: OnboardingTour.tsx
src/components/icons/: ProviderIcon.tsx
src/db/: client.ts
src/db/schema/: agent-sessions.ts  index.ts  session-assessments.ts  session-metrics.ts
src/hooks/: useAiProcessing.ts  useAiProcessingProgress.ts  useAuth.tsx  useAutoSessionProcessing.tsx  useBackgroundProcessing.test.ts  useBackgroundProcessing.ts  useClaudeFiles.ts  useCodexWatcher.ts  useContextFileUsage.ts  useDebouncedCoreMetrics.ts  useDelayedAiProcessing.ts  useDirectoryExists.ts  useLocalSessionContent.ts  useLocalSessionMetrics.ts  useLocalSessions.test.tsx  useLocalSessions.ts  useOnboarding.ts  useOpenCodeWatcher.ts  useProviderConfig.test.tsx  useProviderConfig.ts  useProviderStatus.ts  useQuickRating.tsx  useSessionActivity.ts  useSessionIngest.tsx  useSessionProcessing.test.ts  useSessionProcessing.ts  useSessionSync.ts  useTheme.ts  useToast.ts  useUpdater.ts  useUploadQueue.tsx  useValidationStatus.ts
src/pages/: ConfigurationPage.tsx  DashboardPage.tsx  LogsPage.tsx  OverviewPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ProviderPage.tsx  SessionDetailPage.tsx  SessionsPage.tsx  SettingsPage.tsx  UploadQueuePage.tsx
src/pages/__tests__/: SessionDetailPage.integration.test.tsx  SessionsPage.integration.test.tsx  UploadQueuePage.integration.test.tsx
src/services/: sessionIngestion.ts
src/stores/: configStore.ts  onboardingStore.ts  sessionActivityStore.ts  toastStore.ts
src/types/: providers.ts
src/utils/: dbMappers.ts
tests/: setup.ts
tests/helpers/: fixtures.ts  render-utils.tsx  tauri-mocks.ts
tests/hooks/: useAutoSessionProcessing.test.tsx  useBackgroundProcessing.test.ts  useLocalSessionContent.test.tsx  useLocalSessionMetrics.test.tsx  useLocalSessions.test.tsx  useProviderConfig.test.tsx  useSessionActivity.test.tsx  useSessionIngest.test.tsx  useSessionProcessing.test.ts  useSessionSync.test.tsx  useUploadQueue.test.tsx  useWatcherHooks.test.tsx
tests/hooks/integration/: uploadFlow.integration.test.tsx
tests/stores/: configStore.test.ts  onboardingStore.test.ts  sessionActivityStore.test.ts  toastStore.test.ts
