[package]
name = "guideai-desktop"
version = "0.1.21"
description = "GuideAI Desktop Menubar App"
authors = ["GuideAI Team"]
license = "MIT"
repository = ""
default-run = "guideai-desktop"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
open = "5.0"
# HTTP server for OAuth callback
warp = "0.3"
# URL parsing for OAuth callback
url = "2.0"
# File watching for config changes
notify = "6.0"
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json"] }
# Additional tokio utilities
tokio-util = "0.7"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Shell expansion for paths
shellexpand = "3.1"
# Logging with rotation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "json", "chrono", "env-filter"] }
tracing-appender = "0.2"
# Base64 encoding for file content
base64 = "0.22"
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
# SHA256 hashing for file deduplication
sha2 = "0.10"
# Hex encoding for SHA256 hashes
hex = "0.4"
# Gzip compression for upload optimization
flate2 = "1.0"
# File locking for metadata
fs2 = "0.4"
# Error handling
thiserror = "2.0"
# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }
# Directory for database path
lazy_static = "1.4"
tauri-plugin-http = "2"

# macOS specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
tempfile = "3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
